Changed css class from .fixed=>.stuck

--- a/demo/demo.less
+++ b/demo/demo.less
@@ -28,14 +28,14 @@ ul, li {
   background-color:#ccc; 
   padding:10px;
   .border-radius;
-  .hide-until-fixed{
+  .hide-until-stuck{
     padding-left:30px;
     display:none;
   }
 }
-.fixed #theMenu, #theMenu.fixed{
+.stuck #theMenu, #theMenu.stuck{
   .shadow;
-  .hide-until-fixed{
+  .hide-until-stuck{
     display:inline;
   }
 }
