--- a/jquery.stickymenu.less
+++ b/jquery.stickymenu.less
@@ -1,4 +1,4 @@
-.fixed{
+.stuck{
   position:fixed;
   z-index: 1000;
 }
